--- a/client/src/assets/css/header.css
+++ b/client/src/assets/css/header.css
@@ -21,7 +21,8 @@
   margin-left: -20px;
 }
 .navbar-brand-logo {
-  /*width: 120px;*/
+  width: 200px;
+  height: 80px;
 }
 .header a, .footer a {
   color: #666;
